5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1749_3090.log
== TEST (2019-05-15 18:13:32) 
-- CODE:
x = int(input("movimentos da lagartixa: "))
3 = 0

while(x != 0):
	if(x > 0):
	x = x + 1
-- ERROR:
File "XXXX", line 6
    x = x + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:14:53) 
-- CODE:
x = int(input("movimentos da lagartixa: "))
s = 0

while(x != 0):
	if(x > 0):
	x = x + 1
	s = s + n + 1
-- ERROR:
File "XXXX", line 6
    x = x + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:15:52) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n > 0):
	n = n + 1
	s = s + n + 1
-- ERROR:
File "XXXX", line 6
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:25:53) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	n = n + 1
	s = s + 1
	else:
		
	
	
	
	
-- ERROR:
File "XXXX", line 6
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:29:49) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	n = n + 1
	s = s + 1
	elif:
		n = s + n
		
		

	
	
	
	
-- ERROR:
File "XXXX", line 6
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:32:44) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	n = n + 1
	s = s + 1
	
n = int(input("digite um numero: "))
		
		

	
	
	
	
-- ERROR:
File "XXXX", line 6
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:32:56) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	n = n + 1
	s = s + 1
	
n = int(input("digite um numero: "))
		
		

	
	
	
	
-- ERROR:
File "XXXX", line 6
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:33:37) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   n = n + 1
	
n = int(input("digite um numero: "))
		
		

	
	
	
	
-- ERROR:
File "XXXX", line 6
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:35:47) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
		
		

	
	
	
	
-- ERROR:
File "XXXX", line 6
    n = n + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:37:01) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
	print(n)
	print(ang)
		
		

	
	
	
	
-- ERROR:
File "XXXX", line 11
    print(n)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:37:08) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
	print(n)
		
		

	
	
	
	
-- ERROR:
File "XXXX", line 11
    print(n)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:37:13) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))

		
		

	
	
	
	
-- ERROR:
File "XXXX", line 11
    print(n)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:37:51) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))

		
		

	
	
	
	
-- ERROR:
File "XXXX", line 11
    print(n)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:39:33) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
		n = n + 1
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		
		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:40:01) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		
		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:40:38) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
		n <= n + 1
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		
		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:40:51) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		
		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:41:05) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		
		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:44:07) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		
		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:44:36) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)
		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:45:01) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:45:18) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:45:36) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:45:57) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)

		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:46:08) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)

		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:46:53) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    ang = "Abaixo"
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:53:18) 
-- CODE:
s = int(input("movimentos da lagartixa: "))

while(n != 0):
	n = int(input("movimentos da lagartixas"))
	s = n + s
print(s)
	if(n < 0):
	   print "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    if(n < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:53:26) 
-- CODE:
s = int(input("movimentos da lagartixa: "))

while(n != 0):
	n = int(input("movimentos da lagartixas"))
	s = n + s
print(s)
	if(n <= 0):
	   print "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    if(n <= 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:53:52) 
-- CODE:
s = int(input("movimentos da lagartixa: "))

while(n != 0):
	n = int(input("movimentos da lagartixas"))
	s = n + s
print(s)
	if(n >= 0):
	   print "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    if(n >= 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:54:08) 
-- CODE:
s = int(input("movimentos da lagartixa: "))

while(n != 0):
	n = int(input("movimentos da lagartixas"))
	s = n + s
print(s)
	if(n <=0):
	   print "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		

	
	
	
	
-- EXECUTION TIME:
1.64461
-- ERROR:
  File "/home/codebench/codes/1749/3090/main.py", line 7
    if(n <=0):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:54:12) 
-- CODE:
s = int(input("movimentos da lagartixa: "))

while(n != 0):
	n = int(input("movimentos da lagartixas"))
	s = n + s
print(s)
	if(n < 0):
	   print "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    if(n < 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:54:49) 
-- CODE:
s = int(input("movimentos da lagartixa: "))

while(n != 0):
	n = int(input("movimentos da lagartixas"))
	s = n + s
print(s)
	if(n <= 0):
	   print "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		

	
	
	
	
-- ERROR:
File "XXXX", line 7
    if(n <= 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:54:51) 
-- CODE:
s = int(input("movimentos da lagartixa: "))

while(n != 0):
	n = int(input("movimentos da lagartixas"))
	s = n + s
print(s)
	if(n <= 0):
	   print "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		

	
	
	
	
-- EXECUTION TIME:
1.6057
-- ERROR:
  File "/home/codebench/codes/1749/3090/main.py", line 7
    if(n <= 0):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:55:21) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		
		

	
	
	
	
-- EXECUTION TIME:
732.108
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:

-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:55:21) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		
		

	
	
	
	
-- EXECUTION TIME:
729.503
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:

-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:55:21) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		
		

	
	
	
	
-- EXECUTION TIME:
729.029
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:

-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:55:21) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)

		

	
	
	
	
-- EXECUTION TIME:
535.323
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:

-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:55:21) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		
		

	
	
	
	
-- EXECUTION TIME:
729.453
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:

-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:

-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 18:55:21) 
-- CODE:
n = int(input("movimentos da lagartixa: "))
s = 0

while(n != 0):
	if(n >= 0):
	   ang = "Abaixo"
	else:
		ang = "Acima"
	
n = int(input("digite um numero: "))
print(n)
print(ang)

		
		

	
	
	
	
-- EXECUTION TIME:
730.813
-- TEST CASE 1:
---- input:
1
1
1
1
1
1
1
1
1
10
0
---- correct output:
19
Acima
---- user output:

-- TEST CASE 2:
---- input:
-1
-3
-5
-7
-9
0
---- correct output:
-25
Abaixo
---- user output:

-- TEST CASE 3:
---- input:
30
20
-10
10
-20
-30
0
---- correct output:
0
Inicial
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
